--- a/Baha'i/AB/SAQ/p001-080Part1.html
+++ b/Baha'i/AB/SAQ/p001-080Part1.html
@@ -1968,7 +1968,7 @@
 	<center><h2>COMMENTARY ON THE TWELFTH CHAPTER OF THE REVELATION OF ST. JOHN</h2></center>
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../AB/SFWAB/p001-320.html#para749">p. 172</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">67</DIV></center><p></small></td>
 </tr>
@@ -2005,6 +2005,8 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Rev. 21:2.
+    <hr>
+    <a href="../../../CLUI/UnifiedIndex.html#BibleRevelation12:1">Revelation 12:1</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
