--- a/Baha'i/AB/SAQ/p081-140Part2.html
+++ b/Baha'i/AB/SAQ/p081-140Part2.html
@@ -687,6 +687,7 @@
 	<hr>
 	[CLUI:<br>
 	<a href="../../../CLUI/UnifiedIndex.html#BibleJohn3:13">John 3:13</a>,<br>
+    <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:38">John 6:38</a>,<br>
 	<a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:42">John 6:42</a><br>
 	}
 	</small></td>
@@ -834,7 +835,8 @@
 	In the Gospel of John, in speaking of the Promised One Who was to come after Christ, it is said in chapter 16, verses 12, 13: "I have yet many things to say unto you, but ye cannot bear them now. Howbeit when He, the Spirit of truth, is come, He will guide you into all truth: for He shall not speak of Himself; but whatsoever He shall hear, that shall He speak."
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    <a href="../../../CLUI/UnifiedIndex.html#BibleJohn16:12-13">John 16:12-13</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1187,7 +1189,7 @@
 	The position of Christ was that of absolute perfection; He made His divine perfections shine like the sun upon all believing souls, and the bounties of the light shone and radiated in the reality of men. This is why He says: "I am the bread which descended from heaven; whosoever shall eat of this bread will not die" <sup>1</sup> --that is to say, that whosoever shall partake of this divine food will attain unto eternal life: that is, every one who partakes of this bounty and receives these perfections will find eternal life, will obtain preexistent favors, will be freed from the darkness of error, and will be illuminated by the light of His guidance.
 	</td>
 	<td VALIGN=top><small>
-	1. Cf. John 6:41, <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:50">50</a>, 58.
+	1. Cf. John 6:41, <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:50">50</a>, <a href="../../../CLUI/UnifiedIndex.html#BibleJohn6:58">58</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1420,7 +1422,7 @@
 	<i>Question</i>.--In the Gospel Christ said: "Many are called, but few are chosen," <sup>1</sup> and in the Qur'án it is written: "He will confer particular mercy on whom He pleaseth." What is the wisdom of this?
 	</td>
 	<td VALIGN=top><small>
-	1. Matt. 22:14.
+	1. <a href="../../../CLUI/UnifiedIndex.html#BibleMatthew22:14">Matt. 22:14</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
