--- a/Baha'i/AB/SAQ/p261-306Part5.html
+++ b/Baha'i/AB/SAQ/p261-306Part5.html
@@ -665,7 +665,8 @@
 	But you have asked for arguments of the impossibility of reincarnation. This is what we must now explain. The first argument for its impossibility is that the outward is the expression of the inward; the earth is the mirror of the Kingdom; the material world corresponds to the spiritual world. Now observe that in the sensible world appearances are not repeated, for no being in any respect is identical with, nor the same as, another being. The sign of singleness is visible and apparent in all things. If all the granaries of the world were full of grain, you would not find two grains absolutely alike, the same and identical without any distinction. It is certain that there will be differences and distinctions between them. As the proof of uniqueness exists in all things, and the Oneness and Unity of God is apparent in the reality of all things, the repetition of the same appearance is absolutely impossible. Therefore, reincarnation, which is the repeated appearance of the same spirit with its former essence and condition in this same world of appearance, is impossible and unrealizable.<a name="p284"></a> As the repetition of the same appearance is impossible and interdicted for each of the material beings, so for spiritual beings also, a return to the same condition, whether in the arc of descent or in the arc of ascent, is interdicted and impossible, for the material corresponds to the spiritual.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    ["arc of descent..."] <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../SFWAB/p001-320.html#para560">p. 130</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">284</DIV></center><p></small></td>
 </tr>
@@ -698,6 +699,8 @@
 	1. i.e., of the Circle of Existence.<p>
 	2. Lit., bringing forth.<p>
 	3. Lit., producing something new.
+	<hr>
+    ["arc of descent..."] <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../SFWAB/p001-320.html#para560">p. 130</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">286</DIV></center><p></small></td>
 </tr>
