--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -367,7 +367,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	Set thine heart towards Him Who is the <span style="background-color: #ffffCC" TITLE="Literally, 'a cube.' The cube-like building in the center of the Mosque at Mecca, which contains the Black Stone">Kaaba</span> of God, the Help in Peril, the Self-Subsisting, and raise thou thine hands with such firm conviction as shall cause the hands of all created things to be lifted up towards the heaven of the grace of God, the Lord of<a name="p18"/> all worlds. Turn, then, thy face towards Him in such wise that the faces of all beings will turn in the direction of His shining and luminous Horizon, and say: "Thou seest me, O my Lord, with my face turned towards the heaven of Thy bounty and the ocean of Thy favor, withdrawn from all else beside Thee. I ask of Thee, by the splendors of the Sun of Thy revelation on <span style="background-color: #ffffCC" TITLE="The mountain where the Law was revealed by God to Moses">Sinai</span>, and the effulgences of the Orb of Thy grace which shineth from the horizon of Thy Name, the Ever-Forgiving, to grant me Thy pardon and to have mercy upon me. Write down, then, for me with Thy pen of glory that which will exalt me through Thy Name in the world of creation. Aid me, O my Lord, to set myself towards Thee, and to hearken unto the voice of Thy loved ones, whom the powers of the earth have failed to weaken, and the dominion of the nations has been powerless to withhold from Thee, and who, advancing towards Thee, have said: 'God is our Lord, the Lord of all who are in heaven and all who are on earth!'"
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<hr>
+    ["Thou seest me, O my Lord..."] <i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para179">p. 76</a>
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">18</DIV></center></small></td>
 </tr>
@@ -1578,7 +1579,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	["The one true God..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p390">p. 390</a>. <p>
-	["Glory to Thee, O my God!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p371-399Ch17.html#p390">p. 390</a>
+	["Glory to Thee, O my God!..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3, <a href="../../Others/ROB/V3/p371-399Ch17.html#p390">p. 390</a>; <i>Prayers and Meditations</i>, <a href="../../Baha/PM/p003-340.html#XCII">XCII</a>; <i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para542">p. 191</a><p>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">95</DIV></center></small></td>
 </tr>
@@ -2041,7 +2042,10 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	[Adrianople] Introduction, <a href="Introduction.html#para38">p. xvi</a><p>
 	<i>'...These perspicuous verses have...been sent down from the Kingdom of Divine knowledge...'</i> For the origin of this Tablet see vol. 4, pp. <a href="../../Others/ROB/V4/p145-160Ch09.html#p153">153</a>-4. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#131b">Appendix III</a>)<p>
 	["O thou who hast set thy face..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p270-282Ch12.html#p270">p. 270</a><p>
-	["Have the verses been sent down?"...] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para332">p. 117</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4,  <a href="../../Others/ROB/V4/p145-160Ch09.html#p153">p. 153</a>
+	["Have the verses been sent down?"...] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para332">p. 117</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 4,  <a href="../../Others/ROB/V4/p145-160Ch09.html#p153">p. 153</a><p>
+    <p>
+    <a href="../../../CLUI/UnifiedIndex.html#Qur'án39:68">Qur'án 39:68</a>, <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../AB/SFWAB/p001-320.html#para39">p. 13</a><p>
+
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">132</DIV></center></small></td>
 </tr>
