--- a/Baha'i/Baha/KA/p019-088Aqdas.html
+++ b/Baha'i/Baha/KA/p019-088Aqdas.html
@@ -522,8 +522,8 @@
 		 Should differences arise amongst you over any matter, refer it to God while the Sun still shineth above the horizon of this Heaven and, when it hath set, refer ye to whatsoever hath been sent down by Him. This, <a name="p39"></a> verily, is sufficient unto the peoples of the world. Say: Let not your hearts be perturbed, O people, when the glory of My Presence is withdrawn, and the ocean of My utterance is stilled. In My presence amongst you there is a wisdom, and in My absence there is yet another, inscrutable to all but God, the Incomparable, the All-Knowing. Verily, We behold you from Our realm of glory, and shall aid whosoever will arise for the triumph of Our Cause with the hosts of the Concourse on high and a company of Our favoured angels.<p>
 		 </td>
 	 	 <td VALIGN=top><small><hr>
-		 ["Let not your hearts..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#LXXII">LXXII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p372">p. 372</a><p>
-		 ["Verily, We behold you ..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#LXXII">LXXII</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p379">p. 379</a>
+		 ["Let not your hearts..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#LXXII">LXXII</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i> <a href="../../AB/SFWAB/p001-320.html#para62">p. 17</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p372">p. 372</a><p>
+		 ["Verily, We behold you ..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#LXXII">LXXII</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../AB/SFWAB/p001-320.html#para62">p. 17</a>, <a href="../../AB/SFWAB/p001-320.html#para1197">p. 270</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p379">p. 379</a>
 		 </small></td>
 	 	 <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">39</DIV></center></small></td>
    </tr>
@@ -1875,8 +1875,9 @@
 		 </td>
 		 <td VALIGN=top><small>
 		 <hr>
-		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Opium">opium</a>]
-		 </small></td>
+		 [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Opium">opium</a>]<p>
+         [smoking tobacco] <i>Selections From The Writings of 'Abdu'l-Bahá</i> <a href="../../AB/SFWAB/p001-320.html#para654">p. 148</a>
+         </small></td>
 		 <td>&nbsp;</td>
 	 </tr>
 </table>
