--- a/Baha'i/Baha/KA/p165-251Notes.html
+++ b/Baha'i/Baha/KA/p165-251Notes.html
@@ -876,8 +876,8 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  </td>
 	  <td VALIGN=top><small>
 	  <hr>
-	  ["Whoso layeth claim..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CLXVI">CLXVI</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p257-282Ch16.html#p280">p. 280</a><p>
-	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodfuture">next Manifestation</a>]
+	  ["Whoso layeth claim..."] <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../GL/p003-346.html#CLXVI">CLXVI</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i> <a href="../../AB/SFWAB/p001-320.html#para249">p. 67</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p257-282Ch16.html#p280">p. 280</a><p>
+	  [CLUI: <a href="../../../CLUI/UnifiedIndex.html#Manifestation(s)ofGodfuture">Future Manifestations of God</a>]
 	  </small>
 	  </td>
 	  <td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">196</DIV></center><p></small></td>
@@ -1992,7 +1992,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  Bahá'u'lláh here alludes to 'Abdu'l-Bahá as His Successor and calls upon the believers to turn towards Him. In the Book of the Covenant, His Will and Testament, Bahá'u'lláh discloses the intention of this verse. He states: <i>"The object of this sacred verse is none other except the Most Mighty Branch."</i> The <i>"Most Mighty Branch"</i> is one of the titles conferred by Bahá'u'lláh on 'Abdu'l-Bahá. (See also notes <a href="p165-251Notes.html#note66">66</a> and <a href="p165-251Notes.html#note184">184</a>.)<p>
 	  </td>
 	  <td VALIGN=top><hr><small>
-		["When the ocean of My presence..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para597">p. 221</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p134">p. 134</a>; vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para5">p. 238</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para8">p. 239</a><p>
+		["When the ocean of My presence..."] <i>Tablets of Bahá'u'lláh</i>, <a href="../TOB/p001-270TOB.html#para597">p. 221</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i> <a href="../../AB/SFWAB/p001-320.html#para954">p. 213</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 1 <a href="../../Others/ROB/V1/p105-152Ch09.html#p134">p. 134</a>; vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para5">p. 238</a>, <a href="../../SE/GPB/p235-320ThirdPeriod.html#para8">p. 239</a><p>
 		[CLUI:<br>
 		<a href="../../../CLUI/UnifiedIndex.html#'Abdu'l-BaháInterpreterofWritingsofBahá'u'lláh">'Abdu'l-Bahá</a>,<br>
 		<a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahdí</i></a><br>
@@ -2528,7 +2528,7 @@ Note 108 - fixed quote from God Passes By (remove 'as')
 	  Bahá'u'lláh invests 'Abdu'l-Bahá with the right of interpreting His holy Writ (see also <a href="p165-251Notes.html#note145">note 145</a>).<p>
 	  </td>
 	  <td VALIGN=top><small><hr>
-		 ["When the Mystic Dove..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a><p>
+		 ["When the Mystic Dove..."] <i>Selections From The Writings of 'Abdu'l-Bahá</i> <a href="../../AB/SFWAB/p001-320.html#para955">p. 213</a>; <i>The Revelation of Bahá'u'lláh</i>, vol. 3 <a href="../../Others/ROB/V3/p371-399Ch17.html#p371">p. 371</a><p>
 		 [CLUI:<br>
 		 <a href="../../../CLUI/UnifiedIndex.html#'Abdu'l-BaháInterpreterofWritingsofBahá'u'lláh">'Abdu'l-Bahá</a>,<br>
 		 <a href="../../../CLUI/UnifiedIndex.html#Kitáb-i-'Ahdí"><i>Kitáb-i-'Ahdí</i></a><br>
