--- a/Baha'i/Baha/KI/p095-258.html
+++ b/Baha'i/Baha/KI/p095-258.html
@@ -535,7 +535,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. <a href="../../../CLUI/UnifiedIndex.html#Qur'án6:91">Qur'án 6:91</a>.<br>
-	2. Qur'án 15:72.
+	2. <a href="../../../CLUI/UnifiedIndex.html#Qur'án15:72">Qur'án 15:72</a>.
 	<hr>
 	[CLUI:<br>
 	<a href="../../../CLUI/UnifiedIndex.html#Religioustraditions">traditions</a>,<br>
