--- a/Baha'i/Baha/TOB/p001-270TOB.html
+++ b/Baha'i/Baha/TOB/p001-270TOB.html
@@ -921,7 +921,7 @@
 	Glory be unto Thee, O Lord of the world and Desire of the nations, O Thou Who hast become manifest in the Greatest Name whereby the pearls of wisdom and utterance <a name="p34"/>have appeared from the shells of the great sea of Thy knowledge, and the heavens of divine revelation have been adorned with the light of the appearance of the Sun of Thy countenance.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para465">p. 171</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">34</DIV></center><p></small></td>
 </tr>
@@ -930,7 +930,7 @@
 	I beg of Thee, by that Word through which Thy proof was perfected among Thy creatures and Thy testimony was fulfilled among Thy servants to strengthen Thy people in that whereby the face of the Cause will radiate in Thy dominion, the standards of Thy power will be planted among Thy servants, and the banners of Thy guidance will be raised throughout Thy dominions.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para466">p. 172</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -939,7 +939,7 @@
 	O my Lord! Thou beholdest them clinging to the rope of Thy grace and holding fast unto the hem of the mantle of Thy beneficence. Ordain for them that which may draw them nearer unto Thee, and withhold them from all else save Thee. I beg of Thee, O Thou King of existence and Protector of the seen and the unseen, to make whosoever ariseth to serve Thy Cause as a sea moving by Thy desire, as one ablaze with the fire of Thy Sacred Tree, shining from the horizon of the heaven of Thy will. Verily Thou art the mighty One Whom neither the power of all the world nor the strength of nations can weaken. There is no God but Thee, the One, the Incomparable, the Protector, the Self-Subsistent.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para467">p. 172</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -3170,7 +3170,7 @@
 	I magnify Thy Name, O my God, and offer thanksgiving unto Thee, O my Desire, inasmuch as Thou hast enabled me to clearly perceive Thy straight Path, hast unveiled Thy Great Announcement before mine eyes and hast aided me to set my face towards the Dayspring of Thy Revelation and the Fountainhead of Thy Cause, whilst Thy servants and Thy people turned away from Thee. I entreat Thee, O Lord of the Kingdom of eternity, by the shrill voice of the Pen of Glory, and by the Burning Fire which calleth aloud from the verdant Tree, and by the Ark which Thou hast specially chosen for the people of Bahá, <a name="p117"/>to grant that I may remain steadfast in my love for Thee, be well pleased with whatsoever Thou hast prescribed for me in Thy Book and may stand firm in Thy service and in the service of Thy loved ones. Graciously assist then Thy servants, O my God, to do that which will serve to exalt Thy Cause and will enable them to observe whatsoever Thou hast revealed in Thy Book.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para447.1">p. 164</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">117</DIV></center><p></small></td>
 </tr>
@@ -3179,7 +3179,7 @@
 	Verily Thou art the Lord of Strength, Thou art potent to ordain whatsoever Thou willest and within Thy grasp Thou holdest the reins of all created things. No God is there but Thee, the All-Powerful, the All-Knowing, the All-Wise.
 	</td>
 	<td VALIGN=top><small>
-	&nbsp;
+	<i>Bahá'í Prayers</i>, <a href="../../Comp/BP/p017-206General.html#para447.2">p. 164</a>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -5737,7 +5737,9 @@
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["When the ocean of My presence..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para121">&para;121</a>
+	["When the ocean of My presence..."] <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para121">&para;121</a><p>
+	["Who hath branched..."] <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../AB/SFWAB/p001-320.html#para956">p. 214</a>
+
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">222</DIV></center><p></small></td>
 </tr>
