--- a/Baha'i/Comp/BP/Contents.html
+++ b/Baha'i/Comp/BP/Contents.html
@@ -390,8 +390,9 @@ and are not a part of the sacred texts.
 <tr><td><div align="right"><a href="p017-206General.html#para476">175</a></div></td><td><i>'Abdu'l-Bahá</i></td><td>"Thou seest me, O my God, bowed down in lowliness..."</td></tr>
 <tr><td><div align="right"><a href="p017-206General.html#para479.1">176</a></div></td><td><i>'Abdu'l-Bahá</i></td><td>"Thou knowest, O God, and art my witness…"</td></tr>
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para8">A5</a></div></td><td><i>Bahá'u'lláh</i></td><td>"O Thou Who holdest within Thy grasp the Kingdom of names..."</td></tr>
+<!--this prayer removed from Baha'i.org as of 20240708
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para9">A6</a></div></td><td><i>Bahá'u'lláh</i></td><td>"In the Name of our Lord...Glory be to Thee..."</td></tr>
-
+-->
 
 
 
