--- a/Baha'i/Comp/BP/IndexAuthor.html
+++ b/Baha'i/Comp/BP/IndexAuthor.html
@@ -104,7 +104,10 @@
 <tr><td><div align="right"><a href="p207-268Occasional.html#para21">214</a></div></td><td>"In the Name of God, the Most Ancient, the Most Great...."</td><td>Fire Tablet</td></tr>
 <tr><td><div align="right"><a href="p017-206General.html#para327">121</a></div></td><td>"In the Name of God, the Most High!..."</td><td>Praise and Gratitude</td></tr>
 <tr><td><div align="right"><a href="p207-268Occasional.html#para216.3">238</a></div></td><td>"In the Name of Him Who hath been promised…"</td><td>The Fast</td></tr>
+<!--this prayer removed from Baha'i.org as of 20240708
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para9">A6</a></div></td><td>"In the Name of our Lord...Glory be to Thee..."</td><td>General Prayers For Teaching</td></tr>
+-->
+
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para11">A7</a></div></td><td>"In the Name of our Lord...O God, my God!..."</td><td>Spiritual Qualities</td></tr>
 <tr><td><div align="right"><a href="Prologue.html#para2">p</a></div></td><td>"Intone, O My servant, the verses of God..."</td><td>Prologue</td></tr>
 <tr><td><div align="right"><a href="p017-206General.html#para26">27</a></div></td><td>"Lauded and glorified art Thou, O my God! I entreat Thee..."</td><td>Assistance with Tests</td></tr>
