--- a/Baha'i/Comp/BP/IndexFirstLine.html
+++ b/Baha'i/Comp/BP/IndexFirstLine.html
@@ -129,7 +129,10 @@
 <tr><td><div align="right"><a href="p207-268Occasional.html#para21">214</a></div></td><td>"In the Name of God, the Most Ancient, the Most Great...."</td><td><i>Bahá'u'lláh</i></td><td>Fire Tablet</td></tr>
 <tr><td><div align="right"><a href="p017-206General.html#para327">121</a></div></td><td>"In the Name of God, the Most High!..."</td><td><i>Bahá'u'lláh</i></td><td>Praise and Gratitude</td></tr>
 <tr><td><div align="right"><a href="p207-268Occasional.html#para216.3">238</a></div></td><td>"In the Name of Him Who hath been promised…"</td><td><i>Bahá'u'lláh</i></td><td>The Fast</td></tr>
+<!--this prayer removed from Baha'i.org as of 20240708
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para9">A6</a></div></td><td>"In the Name of our Lord...Glory be to Thee..."</td><td><i>Bahá'u'lláh</i></td><td>General Prayers For Teaching</td></tr>
+-->
+
 <tr><td><div align="right"><a href="AdditionalPrayers.html#para11">A7</a></div></td><td>"In the Name of our Lord...O God, my God!..."</td><td><i>Bahá'u'lláh</i></td><td>Spiritual Qualities</td></tr>
 <tr><td><div align="right"><a href="p017-206General.html#para117">55</a></div></td><td>"In the Name of thy Lord, the Creator..."</td><td><i>The Báb</i></td><td>Detachment</td></tr>
 <tr><td><div align="right"><a href="Prologue.html#para2">p</a></div></td><td>"Intone, O My servant, the verses of God..."</td><td><i>Bahá'u'lláh</i></td><td>Prologue</td></tr>
