--- a/Baha'i/Others/DBNN/p527-581Ch24-footnotes.html
+++ b/Baha'i/Others/DBNN/p527-581Ch24-footnotes.html
@@ -846,8 +846,8 @@
 	"I straightway hastened to Hujjat, who lovingly received me and, wiping the dust from my face, and clothing me with new garments, invited me to be seated by his side and bade <a name="p567"></a> me tell him the fate of his companions. I described to him all that I had seen. 'It is the tumult of the Day of Resurrection,' he explained, 'a tumult such as the world has never seen before. This is the day on which "man shall fly from his brother, and his mother and his father, and his wife and his children." <sup><small>48</small></sup> This is the day when man, not content with having abandoned his brother, sacrifices his substance in order to shed the blood of his nearest kinsman. This is the day when "every suckling woman shall forsake her sucking babe; and every woman that hath a burden in her womb shall cast her burden. And thou shalt see men drunken, yet they are not drunken; but it is the mighty chastisement of God!"'" <sup><small>49</small></sup>
 	</td>
 	<td VALIGN=top><small>
-	<a name="f48"/><a href="p527-581Ch24-footnotes.html#f48">48.</a>	Qur'án, 80:34.  <p>
-	<a name="f49"/><a href="p527-581Ch24-footnotes.html#f49">49.</a>	Qur'án, 22:2. 
+	<a name="f48"/><a href="p527-581Ch24-footnotes.html#f48">48.</a>    Qur'án, 80:34.  <p>
+	<a name="f49"/><a href="p527-581Ch24-footnotes.html#f49">49.</a>    <a href="../../../CLUI/UnifiedIndex.html#Qur'án22:2">Qur'án, 22:2</a>.
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">567</DIV></center></small></td>
 </tr>
