--- a/Baha'i/Others/ROB/V2/p065-106Ch04.html
+++ b/Baha'i/Others/ROB/V2/p065-106Ch04.html
@@ -209,6 +209,8 @@ P. 97, replaced Gleanings reference from clxiii to CLXIV
 	   * 1852-3, the year of the birth of the Revelation of Bahá'u'lláh in the Síyáh-Chál of Tihrán. See vol. 1, <a href="../V1/p007-011Ch01.html">chapter 1</a>.<p>
 	   † The sounding of two trumpet-blasts is prophesied in Islám as one of the signs of the Day of Judgement. The prophecy is interpreted as the advent of the Manifestations of the Báb and Bahá'u'lláh.<p>
 	   ‡ Followers of the Báb.
+       <hr>
+       <a href="../../../../CLUI/UnifiedIndex.html#Qur'án39:68">Qur'án 39:68</a>
 	   </small></td>
 </tr>
 <tr>
