--- a/Baha'i/Others/ROB/V3/p322-342Ch15.html
+++ b/Baha'i/Others/ROB/V3/p322-342Ch15.html
@@ -153,8 +153,8 @@
 	   <hr>
 	   6. <i>Tablets of Bahá'u'lláh</i>, <a href="../../../Baha/TOB/p001-270TOB.html#para207">p. 68</a>.<p>
 	   7. <i>Bahá'í Education</i>, p. 2.<p>
-	   8. <i>Selections</i>, pp. 126-7.<p>
-	   9. <i>ibid</i>. p. 127.
+	   8. <i>Selections</i>, pp. <a href="../../../AB/SFWAB/p001-320.html#para545">126</a>-7.<p>
+	   9. <i>ibid</i>. <a href="../../../AB/SFWAB/p001-320.html#para547">p. 127</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -175,7 +175,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p329">329</a></center><p>
 	   <hr>
-	   10. <i>Selections</i>, p. 127.<p>
+	   10. <i>Selections</i>, <a href="../../../AB/SFWAB/p001-320.html#para549">p. 127</a>.<p>
 	   11. <i>Bahá'í Education</i>, p. 52.
 	   </small></td>
 </tr>
