--- a/Baha'i/Others/ROB/V3/p343-370Ch16.html
+++ b/Baha'i/Others/ROB/V3/p343-370Ch16.html
@@ -394,7 +394,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p366">366</a></center><p>
 	   <hr>
-	   21. <i>Selections</i>, p. 117.
+	   21. <i>Selections</i>, <a href="../../../AB/SFWAB/p001-320.html#para492">p. 117</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -411,7 +411,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p367">367</a></center><p>
 	   <hr>
-	   22. <i>Selections</i>, p. 118.
+	   22. <i>Selections</i>, <a href="../../../AB/SFWAB/p001-320.html#para499">p. 118</a>.
 	   </small></td>
 </tr>
 <tr>
