--- a/Baha'i/Others/ROB/V3/p371-399Ch17.html
+++ b/Baha'i/Others/ROB/V3/p371-399Ch17.html
@@ -70,8 +70,13 @@
 	   <hr>
 	   4. <i>Synopsis</i>, p. 16.<p>
 	   <hr>
-	   ["Let not your hearts..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <p>
-	   ["Endowments dedicated to charity..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para42">&para;42</a>
+	    ["Let not your hearts..."] <i>The Kitáb-i-Aqdas</i>,    <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../../AB/SFWAB/p001-320.html#para62">p. 17</a><p>
+    	["Verily, We behold you ..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../../AB/SFWAB/p001-320.html#para62">p. 17</a>, <a href="../../../AB/SFWAB/p001-320.html#para1197">p. 270</a><p>
+
+
+
+
+       ["Endowments dedicated to charity..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para42">&para;42</a>
        </small></td>
 </tr>
 <tr>
@@ -180,7 +185,7 @@
 	   11. <i>Synopsis</i>, p. 16.<p>
 	   12. Lawh-i-Tibb (Tablet of Medicine) in <i>Majmú'iy-i-Alváh</i>.<p>
 	   <hr>
-   	   ["Verily, we behold you..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <p>	   
+   	   ["Verily, we behold you..."] <i>The Kitáb-i-Aqdas</i>, <a href="../../../Baha/KA/p019-088Aqdas.html#para53">&para;53</a>; <i>Gleanings From The Writings Of Bahá'u'lláh</i> <a href="../../../Baha/GL/p003-346.html#LXXII">LXXII</a>; <i>Selections From The Writings of 'Abdu'l-Bahá</i>, <a href="../../../AB/SFWAB/p001-320.html#para1197">p. 270</a><p>	   
 	   </small></td>
 </tr>
 <tr>
