--- a/Baha'i/Others/ROB/V3/p433-441Apndx_II.html
+++ b/Baha'i/Others/ROB/V3/p433-441Apndx_II.html
@@ -103,7 +103,7 @@
 	   </td>
        <td></td>
        <td VALIGN=top><small><center><a name="p437">437</a></center><p>
-	   * This Tablet in the West is known as the 'Tablet of Purity' and is published in 'Abdu'l-Bahá, <i>Selections</i>, pp. 146-50. Smoking is not forbidden in the Bahá'í Faith, but 'Abdu'l-Bahá has discouraged it for the sake of health and cleanliness.<p>
+	   * This Tablet in the West is known as the 'Tablet of Purity' and is published in 'Abdu'l-Bahá, <i>Selections</i>, pp. <a href="../../../AB/SFWAB/p001-320.html#para646">146</a>-50. Smoking is not forbidden in the Bahá'í Faith, but 'Abdu'l-Bahá has discouraged it for the sake of health and cleanliness.<p>
 	   <hr>
 	   5 . Mehrábkhání, <i>Sharh-i-Ahvál-i-Mírzá Abu'l-Fadl-i-Gulpáygání</i>, pp. 16-17.
 	   </small></td>
@@ -138,7 +138,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p439">439</a></center><p>
 	   <hr>
-	   7. 'Abdu'l-Bahá, <i>Selections</i>, pp. 147-50.<br>
+	   7. 'Abdu'l-Bahá, <i>Selections</i>, pp. <a href="../../../AB/SFWAB/p001-320.html#para651">147</a>-50.<br>
 	   <hr>
 	   [Gambling and the use of opium...] <i>The Kitáb-i-Aqdas</i> <a href="../../../Baha/KA/p019-088Aqdas.html#para155">p. 75</a>
 	   </small></td>
