--- a/Baha'i/Others/ROB/V3/p449-454Biblio.html
+++ b/Baha'i/Others/ROB/V3/p449-454Biblio.html
@@ -39,7 +39,7 @@
 	   'ABDU'L-BAHÁ. <i>Makátíb-i-'Abdu'l-Bahá</i> (Letters of 'Abdu'l-Bahá). Vol. 3, Cairo: 1921; Vol. 4, Írán: BE 121 (AD 1965); Vol. 8, Írán: BE 134 (AD 1978).<p>
 	   <blockquote>
 	   <i>Memorials of the Faithful</i>. Translated from the original Persian text and annotated by Marzieh Gail. Wilmette, Illinois: Bahá'í Publishing Trust, 1971.<p>
-	   <i>Selections from the Writings of 'Abdu'l-Bahá</i>. Compiled by the Research Department of the Universal House of Justice; translated by a Committee at the Bahá'í World Centre and by Marzieh Gail. Haifa: Bahá'í World Centre, 1978.<p>
+	   <a href="../../../AB/SFWAB/Cover.html"><i>Selections from the Writings of 'Abdu'l-Bahá</i></a>. Compiled by the Research Department of the Universal House of Justice; translated by a Committee at the Bahá'í World Centre and by Marzieh Gail. Haifa: Bahá'í World Centre, 1978.<p>
 	   <i>Tablets of 'Abdu'l-Bahá Abbas</i>. 3 volumes. First published 1909-16. New York: Bahá'í Publishing Committee, 1930.<p>
 	   <i>Tablets of the Divine Plan, revealed by 'Abdu'l-Bahá to the North American Bahá'ís</i>. Wilmette, Illinois: Bahá'í Publishing Trust, rev. edn. 1977.<p>
 	   <i>A Traveller's Narrative written to illustrate the episode of the Báb</i>. Translated by E. G. Browne. 1930, RP Amsterdam: Philo Press 1975.<p>
