--- a/Baha'i/Others/ROB/V4/p190-204Ch13.html
+++ b/Baha'i/Others/ROB/V4/p190-204Ch13.html
@@ -228,7 +228,7 @@
        <td VALIGN=top><small><center><a name="p203">203</a></center><p>
 	   <hr>
 	   17. <i>Women</i> (comp.), pp. 2-3.<p> 
-	   18. <i>Selections</i>, p. 302.
+	   18. <i>Selections</i>, <a href="../../../AB/SFWAB/p001-320.html#para1306">p. 302</a>.
 	   </small></td>
 </tr>
 <tr>
@@ -240,7 +240,7 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p204">204</a></center><p>
 	   <hr>
-	   19. <i>Selections</i>, pp. 79-80.
+	   19. <i>Selections</i>, pp. <a href="../../../AB/SFWAB/p001-320.html#para303">79</a>-80.
 	   </small></td>
 </tr>
 </table>
