--- a/Baha'i/Others/ROB/V4/p294-314Ch20.html
+++ b/Baha'i/Others/ROB/V4/p294-314Ch20.html
@@ -218,6 +218,8 @@
        <td></td>
        <td VALIGN=top><small><center><a name="p304">304</a></center><p>
 	   * Known as the 'Tablet to The Hague'.
+	   <hr>
+	   [CLUI: <a href="../../../../CLUI/UnifiedIndex.html#'Abdu'l-Bahá,TabletToTheHague">Tablet to The Hague</a>]
 	   </small></td>
 </tr>
 <tr>
