--- a/Baha'i/Others/ROB/V4/p050-072Ch04.html
+++ b/Baha'i/Others/ROB/V4/p050-072Ch04.html
@@ -74,7 +74,7 @@
        <td VALIGN=top><small><center><a name="p52">52</a></center><p>
 	   * The gathering of the holy souls in the next world.<p>
 	   † <a href="../../../../CLUI/UnifiedIndex.html#Qur'án3:91"><i>Qur'án</i> 3:91</a>.<p>
-	   ‡ <i>Qur'án</i> 29:19; 53:48: 56:92.
+	   ‡ <i>Qur'án</i> <a href="../../../../CLUI/UnifiedIndex.html#Qur'án29:19">29:19</a>; 53:48: 56:92.
 	   </small></td>
 </tr>
 <tr>
