--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@ Many friends have asked for the ability to download all the books in this librar
        <td><center><b>Date</b></center></td>
 </tr>
 <tr>
+       <td>1.13.0</td>
+       <td>Addition of <i>Selections From The Writings of 'Abdu'l-Bahá</i></td>
+       <td>July 2024</td>
+</tr>
+<tr>
        <td>1.12.0</td>
        <td>Addition of <i>Bahá'í Prayers</i></td>
        <td>February 2022</td>
