--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 	<td valign='top'>
 		<h4>
 			<ul type=disc>
-				<li><h4><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></h4></li>
+				<li><a href="Baha'i/AB/SFWAB/Cover.html">Selections From The Writings of 'Abdu'l-Bahá</a></li>
+				<li><a href="Baha'i/AB/SAQ/Cover.html">Some Answered Questions</a></li>
 			</ul>
 			
 		<br><br><br>
@@ -112,7 +113,7 @@
 
 <h4><a href="about.html">About</a></h4>
 
-<small><p><i>The Covenant Library, version 1.12.0.<br>
+<small><p><i>The Covenant Library, version 1.13.0.<br>
 Best viewed with desktop versions of Firefox or Chrome browsers</i>
 </div>
 <p>
