--- a/Baha'i/AB/SFWAB/Contents.html
+++ b/Baha'i/AB/SFWAB/Contents.html
@@ -478,6 +478,31 @@
        <td><small><div align="right">319</div></small></td>
 </tr>
 
+<tr>
+	   <td>&nbsp;</td>
+       <td>&nbsp;</td>
+</tr>
+
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span">NOTES</span>
+       </div>
+	   </td>
+       <td></td>
+       <td><small><div align="right"><a href="Notes.html">321</a></div></small></td>
+</tr>
+<tr>
+	   <td>
+	   <div class="dot-div"></div>
+       <div class="text-div">
+       		<span class="text-span">INDEX</span>
+       </div>
+	   </td>
+       <td></td>
+       <td><small><div align="right"><a href="Index.html">329</a></div></small></td>
+</tr>
 
 </table>
 
