--- a/Baha'i/AB/SFWAB/Index.html
+++ b/Baha'i/AB/SFWAB/Index.html
@@ -22,7 +22,7 @@ America / letter from -- changed from 422 to 243 ???? (there is no page 422)
            </FORM>
     </td>
     <td>
-       	   <FORM ACTION="Cover.html" METHOD=GET>
+       	   <FORM ACTION="Contents.html" METHOD=GET>
            <INPUT TYPE=submit VALUE="^" NAME=up>
            </FORM>
            <FORM ACTION="../../../index.html" METHOD=GET>
@@ -45,7 +45,7 @@ America / letter from -- changed from 422 to 243 ???? (there is no page 422)
 <tt><small>[CLUI: <a href="../../../CLUI/UnifiedIndex.html#SFWAB"><i>Selections from the Writings of 'Abdu'l-Bahá</i></a>]<p></small></tt>
 </center><p>
 <small>
-
+<blockquote>
 
 
 
@@ -2187,8 +2187,8 @@ Zodiac<a name="Zodiac"></a>,
     twelve signs of, <a href= "../SFWAB/p001-320.html#p165">165</a><br>
     </blockquote>
 
-
-
+</small>
+</blockquote>
 
 
 
@@ -2200,7 +2200,7 @@ Zodiac<a name="Zodiac"></a>,
            </FORM>
     </td>
     <td>
-       	   <FORM ACTION="Cover.html" METHOD=GET>
+       	   <FORM ACTION="Contents.html" METHOD=GET>
            <INPUT TYPE=submit VALUE="^" NAME=up>
            </FORM>
            <FORM ACTION="../../../index.html" METHOD=GET>
@@ -2228,7 +2228,7 @@ Zodiac<a name="Zodiac"></a>,
            </FORM>
     </td>
     <td>
-       	   <FORM ACTION="Cover.html" METHOD=GET>
+       	   <FORM ACTION="Contents.html" METHOD=GET>
            <INPUT TYPE=submit VALUE="^" NAME=up>
            </FORM>
            <FORM ACTION="../../../index.html" METHOD=GET>
