--- a/Baha'i/Baha/GL/Index.html
+++ b/Baha'i/Baha/GL/Index.html
@@ -43,6 +43,7 @@
 <tt><small>[CLUI: <a href="../../../CLUI/UnifiedIndex.html#GleaningsfromtheWritingsofBahá'u'lláh"><i>Gleanings from the Writings of Bahá'u'lláh</i></a>]<p></small></tt>
 </center><p>
 <small>
+<blockquote>
 
 'Abdu'l-'Aziz, Sultán, Tablet to, <a href= "../GL/p003-346.html#para465">232</a>-240<br>
 'Abdu'lláh-i-Ubayy, <a href= "../GL/p003-346.html#p25">25</a>, <a href= "../GL/p003-346.html#p83">83</a><br>
@@ -942,10 +943,8 @@ Zion, <a href= "../GL/p003-346.html#p13">13</a>, <a href= "../GL/p003-346.html#p
 	call to, <a href= "../GL/p003-346.html#p16">16</a><br>
 	</blockquote>
 
-
 </small>
-
-
+</blockquote>
 <table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
 <tr>
        <td>
